# AI-Shuho

./: .gitignore  README.md  SPEC.md  pyproject.toml
ai_shuho/: cleaner.py  cli.py  config.py  ingest.py  log_daily.py  log_db.py  log_importer.py  log_util.py  period.py  publisher.py  splitter.py  validator.py
config/: log-sources.json  log-sources.local.json.example  system-config.default.md  writing-config.default.md
skills/ai-shuho-generate/: SKILL.md
skills/ai-shuho-ingest/: SKILL.md
skills/ai-shuho-missing-reports/: SKILL.md
skills/ai-shuho-writing-setup/: SKILL.md
